# sparrow-installer

./: Cargo.toml
src/: main.rs  text.toml  theme.toml
